fixed z-index of facebook invite friends dialog

--- a/libsrc/scss/dialogs.scss
+++ b/libsrc/scss/dialogs.scss
@@ -24,7 +24,6 @@ $header_font: Museo, Helvetica, Arial, sans-serif;
 .dialog { 
   display: none; 
   position:absolute;
-  z-index: 8; 
   width: 500px;
   background-color : white;
   -moz-box-shadow: 05px 05px 05px #666;
@@ -38,6 +37,9 @@ $header_font: Museo, Helvetica, Arial, sans-serif;
       font-family: $header_font;
       text-align: center;
   }
+}
+.dialog, #fb-root {
+    z-index: 8;
 }
 
 .btn_dialog_close, #btn_dialog_close { position: absolute; width: 20px; height: 20px; background-image: asset_url("skin/1/close.png");
